kubernetes_manifests/python_simple_http/ipv4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-http-ipv4
spec:
  selector:
    app: python-http-ipv4
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
